--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,13 @@
 
 storage.googleapis.com
 runs/*
-data/*
-!data/hyps/*
+data/images/
+!data/hyps/hyp.scratch.yaml
 !data/images/zidane.jpg
 !data/images/bus.jpg
 !data/*.sh
 !data/dataset.yaml
+
 
 results*.csv
 # Model ----------------------------------------------------------------------------------------------------------------
